--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -1,4 +1,4 @@
-.contactList {
+/*.contactList {
   width: 600px;
   margin: 0 auto;
 
@@ -28,5 +28,37 @@
 
 .btnContactList:hover {
   background-color: #634456;
+  color: #fff;
+}*/
+
+.contactList {
+  list-style: none;
+  width: 520px;
+  margin: 0 auto;
+}
+
+.contactListItem {
+  display: flex;
+  align-items: center;
+
+  margin-top: 10px;
+  color: rgb(85, 75, 75);
+}
+
+.btnContactList {
+  margin-left: 15px;
+  padding: 5px;
+  width: 60px;
+  cursor: pointer;
+  background-color: rgb(201, 192, 192);
+  border-color: rgb(133, 128, 128);
+  border-radius: 4px;
+  color: rgb(85, 75, 75);
+  transition: background-color 500ms;
+}
+
+.btnContactList:hover {
+  background-color: rgb(145, 122, 122);
+  border-color: rgb(104, 93, 93);
   color: #fff;
 }
