--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,4 +1,4 @@
-.inputContact {
+/*.inputContact {
   display: block;
 
   width: 250px;
@@ -11,4 +11,16 @@
   border: 1px solid #000000;
   border-radius: 4px;
   background-color: #c1cdc1;
+}*/
+
+.inputContact{
+  width: 250px;
+  display: block;
+  margin: 0 auto;
+  margin-top: -10px;
+  margin-bottom: 15px;
+  padding: 7px;
+  border: 0.5px solid rgb(133, 128, 128);
+  border-radius: 4px;
+  background-color: rgb(221, 212, 212); 
 }
