--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
+/*-------------------------------------------------------*/
 /*@import-normalize; /* bring in normalize.css styles */ /*
 
 body {
