--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,4 +1,4 @@
-/*.inputContact {
+.inputContact {
   display: block;
 
   width: 250px;
@@ -11,8 +11,8 @@
   border: 1px solid #000000;
   border-radius: 4px;
   background-color: #c1cdc1;
-}*/
-
+}
+/*
 .inputContact{
   width: 250px;
   display: block;
@@ -24,3 +24,4 @@
   border-radius: 4px;
   background-color: rgb(221, 212, 212); 
 }
+*/
