--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -15,10 +15,10 @@
   padding: 5px;
   width: 80px;
   cursor: pointer;
-  background-color: green;
+  background-color: white;
   border-color: rgb(133, 128, 128);
   border-radius: 4px;
-  color: rgb(85, 75, 75);
+  color: black;
   transition: background-color 500ms;
 }
 
