--- a/src/components/RegisterForm/RegisterForm.module.css
+++ b/src/components/RegisterForm/RegisterForm.module.css
@@ -18,7 +18,7 @@
   background-color: rgb(201, 192, 192);
   border-color: rgb(133, 128, 128);
   border-radius: 4px;
-  color: rgb(85, 75, 75);
+  color: black;
   transition: background-color 500ms;
 }
 
