--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -15,7 +15,7 @@
   padding: 5px;
   width: 80px;
   cursor: pointer;
-  background-color: white;
+  background-color: rgb(201, 192, 192);
   border-color: rgb(133, 128, 128);
   border-radius: 4px;
   color: black;
