--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -1,9 +1,10 @@
 .header {
+  margin-bottom: 16px;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 16px;
-  border-bottom: 1px solid #33170c;
 
-  color: black;
+  color: #000000;
+  border-bottom: 1px solid #33170c;
 }
