--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,10 +1,12 @@
 .link {
   display: inline-block;
-  text-decoration: none;
-  padding: 12px;
-  font-weight: 700;
 
-  color: black;
+  padding: 12px;
+
+  font-weight: 700;
+  text-decoration: none;
+
+  color: #000000;
   transition: color 500ms;
 }
 
