--- a/src/components/RegisterForm/RegisterForm.module.css
+++ b/src/components/RegisterForm/RegisterForm.module.css
@@ -3,23 +3,27 @@
 }
 
 .label {
-  color: black;
-  font-weight: bold;
   display: flex;
   flex-direction: column;
+
   margin-bottom: 15px;
+
+  color: #000000;
+  font-weight: bold;
 }
 
 .registerBtn {
   margin-left: 15px;
   padding: 5px;
   width: 80px;
-  cursor: pointer;
+
+  color: #000000;
   background-color: rgb(201, 192, 192);
+  transition: background-color 500ms;
   border-color: rgb(133, 128, 128);
   border-radius: 4px;
-  color: black;
-  transition: background-color 500ms;
+
+  cursor: pointer;
 }
 
 .registerBtn:hover {
